[package]
name = "unikernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = {path = "../apps/helloworld", package = "helloworld"}
plat = {path = "../plat/qemu-virt", package = "qemu-virt"}
stdio = {path = "../libs/stdio", package = "stdio"}
